add principal colors and modified bootstrap button colors

--- a/app/assets/stylesheets/config/_bootstrap_variables.scss
+++ b/app/assets/stylesheets/config/_bootstrap_variables.scss
@@ -12,10 +12,10 @@ $font-size-base:         1rem;
 
 // Colors
 $body-color: $gray;
-$primary:    $blue;
+$primary:    $logo-green;
 $success:    $green;
-$info:       $yellow;
-$danger:     $red;
+$info:       $azure;
+$danger:     $brown;
 $warning:    $orange;
 
 // Buttons & inputs' radius
