--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -8,3 +8,12 @@ $orange: #E67E22;
 $green: #1EDD88;
 $gray: #0E0000;
 $light-gray: #F4F4F4;
+
+
+// Our base colors:
+$logo-black: #061B14;
+$logo-green: #54C152;
+$background-gray: #fcfcfc;
+$brown: #86615C;
+$cream: #040504;
+$azure: #6494AA;
