add search components and adjust a color

--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -15,5 +15,5 @@ $logo-black: #061B14;
 $logo-green: #54C152;
 $background-gray: #fcfcfc;
 $brown: #86615C;
-$cream: #040504;
+$cream: #F5FBEF;
 $azure: #6494AA;
