--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -4,7 +4,7 @@
   <% @products.each do |product| %>
     <div class="col-md-4">
       <div class="card mb-4 shadow-sm">
-        <%= image_tag product.photos.first.url(:medium), class: "card-img-top", alt: product.name %>
+        <%# <%= image_tag product.photos.first.url(:medium), class: "card-img-top", alt: product.name %>
         <div class="card-body">
           <h5 class="card-title"><%= product.name %></h5>
           <p class="card-text"><%= product.description %></p>
@@ -12,6 +12,7 @@
             <div class="btn-group">
               <%= link_to 'Show', product, class: 'btn btn-sm btn-outline-secondary' %>
               <%= link_to 'Edit', edit_product_path(product), class: 'btn btn-sm btn-outline-secondary' %>
+              <%= link_to 'Delete', product_path(product), data: { turbo_method: :delete, turbo_confirm: 'Are you sure you want to delete this product?'}, class: 'btn btn-sm btn-outline-secondary' %>
             </div>
             <small class="text-muted"><%= number_to_currency(product.price) %></small>
           </div>
