--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -18,5 +18,10 @@
   <%= @product.category %>
 </p>
 
+<p>
+  <strong>Renter:</strong>
+  <%= @product.user.username %>
+</p>
+
 <%= link_to 'Edit', edit_product_path(@product) %> |
 <%= link_to 'Back', products_path %>
