--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -12,8 +12,10 @@
           <div class="d-flex justify-content-between align-items-center">
             <div class="btn-group">
               <%= link_to 'Show', product, class: 'btn btn-sm btn-outline-secondary' %>
-              <%= link_to 'Edit', edit_product_path(product), class: 'btn btn-sm btn-outline-secondary' %>
-              <%= link_to 'Delete', product_path(product), data: { turbo_method: :delete, turbo_confirm: 'Are you sure you want to delete this product?'}, class: 'btn btn-sm btn-outline-secondary' %>
+              <% if current_user == product.user %>
+                <%= link_to 'Edit', edit_product_path(product), class: 'btn btn-sm btn-outline-secondary' %>
+                <%= link_to 'Delete', product_path(product), data: { turbo_method: :delete, turbo_confirm: 'Are you sure you want to delete this product?'}, class: 'btn btn-sm btn-outline-secondary' %>
+              <% end %>
             </div>
             <small class="text-muted"><%= number_to_currency(product.price) %></small>
           </div>
