add cloudinary photos and codes on products

--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -4,7 +4,7 @@
   <% @products.each do |product| %>
     <div class="col-md-4">
       <div class="card mb-4 shadow-sm">
-        <%# <%= image_tag product.photos.first.url(:medium), class: "card-img-top", alt: product.name %>
+         <%= cl_image_tag product.photos.first.key, class: "card-img-top", alt: product.name %>
         <div class="card-body">
           <h5 class="card-title"><%= product.name %></h5>
           <p class="card-text"><%= product.description %></p>
