--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -4,7 +4,7 @@
   <%= f.input :description %>
   <%= f.input :price %>
   <%= f.input :category, collection: Product::CATEGORIES %>
-  <%= f.input :photo, as: :file %>
+  <%= f.input :photos, as: :file, input_html: { multiple: true }  %>
 
   <div class="actions">
     <%= f.button :submit %>
