add cloudinary to user pics

--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -10,6 +10,8 @@
       <p>Currently waiting confirmation for: <%= resource.unconfirmed_email %></p>
     <% end %>
 
+    <%= f.input :photo, as: :file,
+                required: true %>
     <%= f.input :address,
                 required: false,
                 autofocus: true,
