--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,89 @@
+<div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(https://images.unsplash.com/photo-1526406915894-7bcd65f60845?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Mnx8ZXF1aXBtZW50c3xlbnwwfDB8MHx8fDA%3D);">
+  <div class="container">
+    <h1><strong>Tá precisando do quê?</strong></h1>
+    <p>Rent whatever you need and use it!</p>
+    <a class="btn btn-primary" href="#">Explore</a>
+  </div>
+</div>
+
+<div class="container text-center my-2 p-2">
+  <h2 class="text-center mt-2"><strong>How it works</strong></h2>
+    <div class="row d-flex justify-content-between">
+
+      <div class="p-2 col-12 col-lg-4">
+          <div class="card mb-3 shadow-sm p-3 rounded-3">
+             <div class="card-body">
+                <h5 class="card-title"><strong>Search</strong></h5>
+                <p class="card-text">First, Search a product!</p>
+            </div>
+          </div>
+      </div>
+
+      <div class="p-2 col-12 col-lg-4">
+          <div class="card mb-3 shadow-sm p-3 rounded-3">
+             <div class="card-body">
+                <h5 class="card-title"><strong>Apply</strong></h5>
+                <p class="card-text">check the detail, term, price and apply!</p>
+            </div>
+          </div>
+      </div>
+
+      <div class="p-2 col-12 col-lg-4">
+          <div class="card mb-3 shadow-sm p-3 rounded-3">
+             <div class="card-body">
+                <h5 class="card-title"><strong>Write a review</strong></h5>
+                <p class="card-text">After you rent and back the product to the owner, it's time to write a review</p>
+            </div>
+          </div>
+      </div>
+
+    </div>
+</div>
 
 
-  <h1>Pages#home</h1>
-  <p>Find me in app/views/pages/home.html.erb</p>
+<div class="container text-center my-2 p-2 ">
+  <h2 class="text-center mt-2"><strong>Products</strong></h2>
+  <div class="row">
+
+    <div class="col-sm-12 col-md-6 col-lg-3">
+      <div class="card rounded-3">
+        <img src="https://images.unsplash.com/photo-1502877338535-766e1452684a?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8NHx8Y2FyfGVufDB8MHwwfHx8MA%3D%3D" class="card-img-top rounded-3" alt="..." >
+        <div class="card-body">
+          <h4>Car</h4>
+          <p class="card-text">You can rent a car and explore the city</p>
+        </div>
+      </div>
+    </div>
+
+    <div class="col-sm-12 col-md-6 col-lg-3">
+      <div class="card rounded-3">
+        <img src="https://images.unsplash.com/photo-1568605114967-8130f3a36994?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8M3x8JUU1JUFFJUI2fGVufDB8MHwwfHx8MA%3D%3D" class="card-img-top rounded-3" alt="...">
+        <div class="card-body">
+          <h4>House</h4>
+          <p class="card-text">pay monthly and stay confortable</p>
+        </div>
+      </div>
+    </div>
+
+    <div class="col-sm-12 col-md-6 col-lg-3">
+      <div class="card rounded-3">
+        <img src="https://plus.unsplash.com/premium_photo-1668971283504-ae5f2532efd0?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTd8fGNhdHxlbnwwfDB8MHx8fDA%3D" class="card-img-top rounded-3" alt="...">
+        <div class="card-body">
+          <h4>Pet</h4>
+          <p class="card-text">you're not alone, the pet makes you feel better </p>
+        </div>
+      </div>
+    </div>
+
+    <div class="col-sm-12 col-md-6 col-lg-3">
+      <div class="card rounded-3">
+        <img src="https://images.unsplash.com/photo-1691437943737-49dccf0b7f22?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8NHx8aGVycmFtaWVudGFzJTIwZWxlY3RyaWNhc3xlbnwwfDB8MHx8fDA%3D" class="card-img-top rounded-3" alt="...">
+        <div class="card-body">
+          <h4>Equipment</h4>
+          <p class="card-text">Jsut rent whenever you need</p>
+        </div>
+      </div>
+    </div>
+
+  </div>
+</div>
