--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,32 +1,46 @@
-<% @product.photos.each do |photo| %>
-  <%= cl_image_tag photo.key, height: 300, width: 400, crop: :fill %>
-<% end %>
 
 
-<p>
-  <strong>Name:</strong>
-  <%= @product.name %>
-</p>
 
-<p>
-  <strong>Description:</strong>
-  <%= @product.description %>
-</p>
-
-<p>
-  <strong>Price:</strong>
-  R$<%= @product.price %>
-</p>
-
-<p>
-  <strong>Category:</strong>
-  <%= @product.category %>
-</p>
-
-<p>
-  <strong>Renter:</strong>
-  <%= @product.user.username %>
-</p>
-
-<%= link_to 'Edit', edit_product_path(@product) %> |
-<%= link_to 'Back', products_path %>
+<div class="container product-details-card">
+  <div class="row mt-4">
+    <h2 class="text-center"><%= @product.name %></h2>
+  </div>
+  <div class="row justify-content-center">
+    <% @product.photos.each do |photo| %>
+      <%= cl_image_tag photo.key, height: 300, width: 400, crop: :fill %>
+    <% end %>
+  </div>
+  <div class="row">
+    <div class="col-5">
+      <h4 class="mb-4">Information</h3>
+      <p>
+        <strong>Description:</strong>
+        <%= @product.description %>
+      </p>
+      <p>
+        <strong>Price:</strong>
+        R$<%= @product.price %>
+      </p>
+      <p>
+        <strong>Category:</strong>
+        <%= @product.category %>
+      </p>
+      <p>
+        <strong>Renter:</strong>
+        <%= @product.user.username %>
+      </p>
+      <%= link_to 'Edit', edit_product_path(@product) %> |
+      <%= link_to 'Back', products_path %>
+    </div>
+    <% unless current_user == @product.user %>
+      <div class="col-7">
+        <h4 class="mb-4">Rent this <%= @product.category %></h4>
+        <%= simple_form_for [@product, @rental] do |f| %>
+          <%= f.input :start_date %>
+          <%= f.input :end_date %>
+          <%= f.button :submit, "Rent this item", class: "btn btn-default btn-primary text-white" %>
+        <% end %>
+      </div>
+    <% end %>
+  </div>
+</div>
