fixed cloudinary index navbar picture and add a picture default

--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -4,7 +4,8 @@
 @import "form_legend_clear";
 @import "navbar";
 @import "banner";
+@import "footer";
 @import "card";
 @import "login_form";
+@import "search";
 @import "signup";
-
