--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -3,6 +3,7 @@
   background-size: cover;
   background-position: center;
   padding: 150px 0;
+  text-align: center;
 
   h1{
     margin: 0;
@@ -13,6 +14,7 @@
   }
 
   p {
+    margin-top: 8px;
     font-size: 20px;
     color: white;
     opacity: .7;
