--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
   <body>
     <div class="d-flex flex-column justify-content-between ">
     <%= render "shared/navbar" %>
-    <div class="vh-100"><%= yield %></div>
+    <div><%= yield %></div>
     <%= render "pages/footer" %>
     </div>
     <%= render "shared/flashes" %>
