--- a/app/views/pages/_footer.html.erb
+++ b/app/views/pages/_footer.html.erb
@@ -2,52 +2,33 @@
   <footer class="footer-bs p-3 mb-2 bg-light text-dark">
     <div class="row">
       <div class="col-md-3 footer-brand animated fadeInLeft">
-
         <h2>LOGO</h2>
-
-          <p>Suspendisse hendrerit tellus laoreet luctus pharetra. Aliquam porttitor vitae orci nec ultricies. Curabitur vehicula, libero eget faucibus faucibus, purus erat eleifend enim, porta pellentesque ex mi ut sem.</p>
-          <p>© 2045 Bootstrap, All rights reserved</p>
+        <p>Suspendisse hendrerit tellus laoreet luctus pharetra. Aliquam porttitor vitae orci nec ultricies. Curabitur vehicula, libero eget faucibus faucibus, purus erat eleifend enim, porta pellentesque ex mi ut sem.</p>
+        <p>© 2045 Bootstrap, All rights reserved</p>
       </div>
-    <div class="col-md-3 footer-nav animated fadeInUp">
+
+      <div class="col-md-3 footer-nav animated fadeInUp">
         <h4>Menu —</h4>
-          <div class="col-md-6">
-            <ul class="pages">
-                <li><a href="#">Cars</a></li>
-                <li><a href="#">Homes</a></li>
-                <li><a href="#">Utility</a></li>
-                <li><a href="#">Clothes</a></li>
-                <li><a href="#">Advice</a></li>
-            </ul>
-          </div>
-          <div class="col-md-6">
-            <ul class="list">
-                <li><a href="#">About Us</a></li>
-                <li><a href="#">Contacts</a></li>
-                <li><a href="#">Terms & Condition</a></li>
-                <li><a href="#">Privacy Policy</a></li>
-            </ul>
-          </div>
+        <div class="col-md-6">
+          <ul class="list">
+              <li><a href="#">About Us</a></li>
+              <li><a href="#">Products</a></li>
+              <li><a href="#">Contacts</a></li>
+              <li><a href="#">Terms & Condition</a></li>
+              <li><a href="#">Privacy Policy</a></li>
+          </ul>
         </div>
-          <div class="col-md-2 footer-social animated fadeInDown">
-            <h4>Follow Us</h4>
-              <ul>
-                <li><a href="#">Facebook</a></li>
-                <li><a href="#">Twitter</a></li>
-                <li><a href="#">Instagram</a></li>
-                <li><a href="#">Github</a></li>
-                </ul>
-            </div>
-        <div class="col-md-3 footer-ns animated fadeInRight">
-          <h4>Newsletter</h4>
-              <p>A rover wearing a fuzzy suit doesn’t alarm the real penguins</p>
-              <p>
-                <div class="input-group">
-                 
-                  <span class="input-group-btn">
-                    <button class="btn btn-default" type="button"><span class="glyphicon glyphicon-envelope"></span></button>
-                  </span>
-                </div><!-- /input-group -->
-              </p>
-        </div>
+      </div>
+
+      <div class="col-md-2 footer-social animated fadeInDown">
+        <h4>Follow Us</h4>
+        <ul>
+          <li><a href="#">Facebook</a></li>
+          <li><a href="#">Twitter</a></li>
+          <li><a href="#">Instagram</a></li>
+          <li><a href="#">Github</a></li>
+        </ul>
+      </div>
+
     </div>
   </footer>
