--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -39,7 +39,8 @@
     background: rgba(0, 0, 0, .100);
   }
 
-.card-img-top {
-  width: 100%;
-  margin: auto
+   .card-img-top {
+    width: 100%;
+    margin: auto
+  }
 }
