--- a/app/views/pages/_footer.html.erb
+++ b/app/views/pages/_footer.html.erb
@@ -1,5 +1,5 @@
 
-  <footer class="footer-bs p-3 mb-2 bg-light text-dark">
+  <footer class="p-3 mb-2 bg-light text-dark">
     <div class="row">
       <div class="col-md-3 footer-brand animated fadeInLeft">
 
@@ -42,7 +42,7 @@
               <p>A rover wearing a fuzzy suit doesn’t alarm the real penguins</p>
               <p>
                 <div class="input-group">
-                 
+
                   <span class="input-group-btn">
                     <button class="btn btn-default" type="button"><span class="glyphicon glyphicon-envelope"></span></button>
                   </span>
