--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -6,9 +6,26 @@
     <h2 class="text-center"><%= @product.name %></h2>
   </div>
   <div class="row justify-content-center">
-    <% @product.photos.each do |photo| %>
-      <%= cl_image_tag photo.key, height: 300, width: 400, crop: :fill %>
-    <% end %>
+    <div id="carouselExample" class="carousel slide">
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <%= cl_image_tag @product.photos.first.key, class: "d-block w-100" %>
+        </div>
+        <% @product.photos[1..].each do |photo| %>
+          <div class="carousel-item">
+              <%= cl_image_tag photo.key, class: "d-block w-100" %>
+          </div>
+        <% end %>
+      </div>
+      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+      </button>
+      <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+      </button>
+    </div>
   </div>
   <div class="row">
     <div class="col-5">
