--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -44,3 +44,12 @@
     margin: auto
   }
 }
+
+.card.mb-4.shadow-sm {
+  .card-img-top {
+    min-height: 25vh;
+  }
+  .card-body {
+    min-height: 15vh;
+  }
+}
