--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,5 +1,15 @@
 <h1>Products</h1>
 
+<div class="row justify-content-center">
+  <div class="col-sm-8 m-4">
+    <%= form_with url: products_path, method: :get, class: "d-flex" do %>
+      <%= text_field_tag :query, params[:query], class: "search-form-control form-control", placeholder: "Type a keyword or category" %>
+      <%= submit_tag "Search", name: "", class: "btn btn-danger" %>
+    <% end  %>
+  </div>
+</div>
+
+
 <div class="row">
   <% @products.each do |product| %>
     <div class="col-md-4">
