--- a/app/views/users/profile.html.erb
+++ b/app/views/users/profile.html.erb
@@ -38,13 +38,28 @@
 
   <%= link_to 'New Product', new_product_path, class: 'btn btn-primary mb-3' %>
 
-
-
+<% if current_user.products.present? %>
+  <h2>Pending Rentals:</h2>
+  <% pending_rentals = current_user.products.map(&:rentals).flatten.select { |rental| !rental.confirmed } %>
+  <% if pending_rentals.present? %>
+    <ul>
+      <% pending_rentals.each do |rental| %>
+        <li>
+          <%= rental.product.name %> - <%= rental.start_date %> to <%= rental.end_date %>
+          <%= button_to "Confirm", rental_path(rental), method: :patch, data: { confirm: "Are you sure you want to confirm this rental request?" } %>
+          <%= link_to "Reject", rental_path(rental), data: { turbo_method: :delete, turbo_confirm: 'Are you sure you want to reject this rental request?'} %>
+        </li>
+      <% end %>
+    </ul>
+  <% else %>
+    <p>No pending rentals.</p>
+  <% end %>
+<% end %>
 
   <h2>Rentals:</h2>
   <ul>
     <% current_user.rentals.each do |rental| %>
-      <li><%= rental.product.name %> - <%= rental.start_date %> to <%= rental.end_date %></li>
+      <li><%= rental.product.name %> - <%= rental.start_date %> to <%= rental.end_date %> - <%= rental.confirmed ? 'Accepted' : 'Pending' %></li>
     <% end %>
   </ul>
 </div>
