--- a/app/views/pages/_footer.html.erb
+++ b/app/views/pages/_footer.html.erb
@@ -1,32 +1,27 @@
 
   <footer class="p-3 mb-2 bg-light text-dark">
     <div class="row">
-      <div class="col-md-3 footer-brand animated fadeInLeft">
-        <h2>LOGO</h2>
-        <p>Suspendisse hendrerit tellus laoreet luctus pharetra. Aliquam porttitor vitae orci nec ultricies. Curabitur vehicula, libero eget faucibus faucibus, purus erat eleifend enim, porta pellentesque ex mi ut sem.</p>
-        <p>© 2045 Bootstrap, All rights reserved</p>
+      <div class="col-md-6 footer-brand animated fadeInLeft">
+        <h3> <strong>TA PRECISANDO?</strong> Explore Our Rentals:</h3>
+        <p>Explore a variety of rentals for cars, home essentials, and pets. Your convenience is our priority.</p>
+        <p>© 2045 Lewagon RJ, All rights reserved</p>
       </div>
 
       <div class="col-md-3 footer-nav animated fadeInUp">
-        <h4>Menu —</h4>
+        <h4>Menu</h4>
         <div class="col-md-6">
           <ul class="list">
               <li><a href="#">About Us</a></li>
-              <li><a href="#">Products</a></li>
-              <li><a href="#">Contacts</a></li>
-              <li><a href="#">Terms & Condition</a></li>
-              <li><a href="#">Privacy Policy</a></li>
+              <li><a href="#">Contact</a></li>
           </ul>
         </div>
       </div>
 
-      <div class="col-md-2 footer-social animated fadeInDown">
+      <div class="col-md-3 footer-social animated fadeInDown">
         <h4>Follow Us</h4>
-        <ul>
-          <li><a href="#">Facebook</a></li>
-          <li><a href="#">Twitter</a></li>
-          <li><a href="#">Instagram</a></li>
-          <li><a href="#">Github</a></li>
+        <ul class="list-icon">
+          <li><i class="fa-brands fa-square-facebook"></i></li>
+          <li><i class="fa-brands fa-instagram"></i></li>
         </ul>
       </div>
 
