--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -13,8 +13,8 @@
       <div class="p-2 col-12 col-lg-4">
           <div class="card mb-3 shadow-sm p-3 rounded-3">
              <div class="card-body">
-                <h5 class="card-title"><strong>Search</strong></h5>
-                <p class="card-text">First, Search a product!</p>
+                <h5 class="card-title"><i class="fa-solid fa-magnifying-glass"></i>&nbsp;<strong>Search</strong></h5>
+                <p class="card-text">Find what you need with our intuitive search feature. Explore a diverse range of rental options</p>
             </div>
           </div>
       </div>
@@ -22,8 +22,8 @@
       <div class="p-2 col-12 col-lg-4">
           <div class="card mb-3 shadow-sm p-3 rounded-3">
              <div class="card-body">
-                <h5 class="card-title"><strong>Apply</strong></h5>
-                <p class="card-text">check the detail, term, price and apply!</p>
+                <h5 class="card-title"><i class="fa-solid fa-bag-shopping"></i>&nbsp;<strong>Apply</strong></h5>
+                <p class="card-text">Simply select the item you want, choose your dates, and complete the straightforward application process</p>
             </div>
           </div>
       </div>
@@ -31,8 +31,8 @@
       <div class="p-2 col-12 col-lg-4">
           <div class="card mb-3 shadow-sm p-3 rounded-3">
              <div class="card-body">
-                <h5 class="card-title"><strong>Write a review</strong></h5>
-                <p class="card-text">After you rent and back the product to the owner, it's time to write a review</p>
+                <h5 class="card-title"><i class="fa-solid fa-pen"></i>&nbsp;<strong>Write a review</strong></h5>
+                <p class="card-text">Share your experience and help our community grow! After your rental, take a moment to write a review</p>
             </div>
           </div>
       </div>
