--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -44,3 +44,10 @@
     margin: auto
   }
 }
+
+.card-image {
+  height: 200px;
+  background-size: cover;
+  background-position-x: center;
+  background-position-y: center;
+}
