--- a/app/views/products/new.html.erb
+++ b/app/views/products/new.html.erb
@@ -1,5 +1,12 @@
-<h1>New Product</h1>
 
-<%= render 'form', product: @product %>
+<h1 class="text-capitalize text-center">New Product</h1>
 
-<%= link_to 'Back', products_path %>
+
+<div class="container ">
+  <div class="row mt-4 justify-content-center">
+    <div class="col-6 col-lg-4">
+      <%= render 'form', product: @product %>
+      <%= link_to 'Back', products_path %>
+    </div>
+  </div>
+</div>
