Re-added HTML for styling.

--- a/app/views/products/edit.html.erb
+++ b/app/views/products/edit.html.erb
@@ -1,20 +1,28 @@
 <h1>Edit <%= @product.name %> </h1>
 
-<%= simple_form_for(@product) do |f| %>
+<div class="container ">
+  <div class="row mt-4 justify-content-center">
+    <div class="col-6 col-lg-6 p-4 mb-2 bg-light text-dark">
 
-  <%= f.input :name %>
-  <%= f.input :description %>
-  <%= f.input :price %>
-  <%= f.input :category, collection: Product::CATEGORIES %>
-  <% @product.photos.each do |photo| %>
-    <%= f.hidden_field :photos, multiple: true, value: photo.signed_id %>
-  <% end %>
-  <%= f.input :photos, as: :file, input_html: { multiple: true }  %>
-  <div class="actions">
-    <%= f.button :submit %>
+      <%= simple_form_for(@product) do |f| %>
+
+        <%= f.input :name %>
+        <%= f.input :description %>
+        <%= f.input :price %>
+        <%= f.input :category, collection: Product::CATEGORIES %>
+        <% @product.photos.each do |photo| %>
+          <%= f.hidden_field :photos, multiple: true, value: photo.signed_id %>
+        <% end %>
+        <%= f.input :photos, as: :file, input_html: { multiple: true }  %>
+        <div class="actions">
+          <%= f.button :submit %>
+        </div>
+
+      <% end %>
+
+      <%= link_to 'Show', @product %> |
+      <%= link_to 'Back', products_path %>
+
+    </div>
   </div>
-
-<% end %>
-
-<%= link_to 'Show', @product %> |
-<%= link_to 'Back', products_path %>
+</div>
