--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -19,7 +19,7 @@
             <% if current_user.photo.attached?  %>
               <%= cl_image_tag current_user.photo.key, height: 40, width: 40, crop: :fill, class: "avatar", alt: "dropdown menu" %>
             <% else %>
-              <%= image_tag "https://cdn.pixabay.com/photo/2023/09/22/12/18/profile-8268938_640.png", alt: "default image", width: 35 %>
+              <%= image_tag "https://cdn.pixabay.com/photo/2023/09/22/12/18/profile-8268938_640.png", alt: "default image", class: "rounded-circle", width: 35 %>
             <% end %>
           </a>
             <div class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
