add button to banner and navbar

--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -10,3 +10,13 @@
 .navbar-lewagon .navbar-brand img {
   width: 40px;
 }
+
+.navbar-nav.me-auto{
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+
+  li{
+    padding:10px;
+  }
+}
