--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -2,7 +2,7 @@
   <div class="container">
     <h1><strong>Tá precisando do quê?</strong></h1>
     <p>Rent whatever you need and use it!</p>
-    <%# <a class="btn btn-primary" href="products">Explore</a> %>
+    <a class="btn btn-primary" href="products">Explore Our Rentals</a>
   </div>
 </div>
 
