--- a/app/views/users/profile.html.erb
+++ b/app/views/users/profile.html.erb
@@ -27,10 +27,16 @@
             <small class="text-muted"><%= number_to_currency(product.price) %></small>
             <div class="d-flex justify-content-between align-items-center">
               <div class="btn-group">
-                <%= link_to 'Show', product, class: 'btn btn-sm btn-outline-secondary' %>
+                <%= link_to product do %>
+                 <i class="fa-solid fa-eye me-2"></i>
+                <% end %>
                 <% if current_user == product.user %>
-                  <%= link_to 'Edit', edit_product_path(product), class: 'btn btn-sm btn-outline-secondary' %>
-                  <%= link_to 'Delete', product_path(product), data: { turbo_method: :delete, turbo_confirm: 'Are you sure you want to delete this product?'}, class: 'btn btn-sm btn-outline-secondary' %>
+                  <%= link_to edit_product_path(product) do %>
+                    <i class="fa-regular fa-pen-to-square me-2"></i>
+                  <% end %>
+                  <%= link_to product_path(product), data: { turbo_method: :delete, turbo_confirm: 'Are you sure you want to delete this product?'} do %>
+                    <i class="fa-solid fa-trash-can"></i>
+                  <% end %>
                 <% end %>
               </div>
             </div>
@@ -48,12 +54,14 @@
   <h2>Pending Rentals:</h2>
   <% pending_rentals = current_user.products.map(&:rentals).flatten.select { |rental| !rental.confirmed } %>
   <% if pending_rentals.present? %>
-    <ul>
+    <ul class='list-group list-group-horizontal'>
       <% pending_rentals.each do |rental| %>
-        <li>
-          <%= rental.product.name %> - <%= rental.start_date %> to <%= rental.end_date %>
-          <%= button_to "Confirm", rental_path(rental), method: :patch, data: { confirm: "Are you sure you want to confirm this rental request?" } %>
-          <%= link_to "Reject", rental_path(rental), data: { turbo_method: :delete, turbo_confirm: 'Are you sure you want to reject this rental request?'} %>
+        <li class="list-group-item">
+          <%= rental.product.name %> - <%= rental.start_date %> to <%= rental.end_date %> </li>
+        <li class="list-group-item">
+          <%= button_to "Confirm", rental_path(rental), method: :patch, data: { confirm: "Are you sure you want to confirm this rental request?" }, class: 'btn btn-primary' %> </li>
+        <li class="list-group-item">
+          <%= link_to "Reject", rental_path(rental), data: { turbo_method: :delete, turbo_confirm: 'Are you sure you want to reject this rental request?'}, class: 'btn btn-warning' %>
         </li>
       <% end %>
     </ul>
