--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -68,7 +68,7 @@
     </div>
   </div>
 
-  <div class="row my-4">
+  <div class="row my-4 text-capitalize">
     <div class="col-5">
       <h4 class="mb-4">Information</h3>
       <p>
