--- a/app/assets/stylesheets/components/_product_details_card.scss
+++ b/app/assets/stylesheets/components/_product_details_card.scss
@@ -14,4 +14,10 @@
     width: 100%;
     margin-bottom: 20px;
   }
+  a {
+    text-decoration: none;
+    bottom: 20px;
+    font-size: 20px;
+    margin-right: 5px;
+  }
 }
