--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -2,48 +2,53 @@
 
 
 
-<div class="row justify-content-center">
-  <div class="col-sm-8 m-4">
-    <%= form_with url: products_path, method: :get, class: "d-flex" do %>
-      <%= text_field_tag :query, params[:query], class: "search-form-control form-control", placeholder: "Type a keyword or category" %>
-      <%= submit_tag "Search", name: "", class: "btn btn-danger" %>
-    <% end  %>
+
+
+<div class="container">
+
+  <div class="row justify-content-center">
+    <div class="col-sm-8 m-4">
+      <%= form_with url: products_path, method: :get, class: "d-flex" do %>
+        <%= text_field_tag :query, params[:query], class: "search-form-control form-control", placeholder: "Type a keyword or category" %>
+        <%= submit_tag "Search", name: "", class: "btn btn-danger" %>
+      <% end  %>
+    </div>
   </div>
-</div>
 
+  <div class="row my-4">
+    <% @products.each do |product| %>
+      <div class="col-lg-3 col-md-4 col-sm-12">
+        <div class="card mb-4 shadow-sm">
 
-<div class="row">
-  <% @products.each do |product| %>
-    <div class="col-lg-4 col-md-4">
-      <div class="card mb-4 shadow-sm">
-        <div class="card-category card-image"
+          <div class="card-category card-image"
+            style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)),
+            url('<%= cl_image_path product.photos.first.key, height: 300, crop: :fill %>')">
+          </div>
 
-          style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)),
-          url('<%= cl_image_path product.photos.first.key, height: 300, crop: :fill %>')">
-        </div>
+          <div class="card-body text-capitalize">
 
-        <div class="card-body text-capitalize">
+            <h5 class="card-title text-decoration-none"><%= link_to product.name, product %></h5>
 
-          <h5 class="card-title text-decoration-none"><%= link_to product.name, product %></h5>
+            <p class="card-text"><%= product.description %></p>
+            <p class="card-text">Rented by: <%= product.user.username %></p>
+            <div class="d-flex justify-content-between align-items-center">
+              <div class="btn-group">
 
-          <p class="card-text"><%= product.description %></p>
-          <p class="card-text">Rented by: <%= product.user.username %></p>
-          <div class="d-flex justify-content-between align-items-center">
-            <div class="btn-group">
-
-              <% if current_user == product.user %>
-                <%= link_to 'Edit', edit_product_path(product), class: 'btn btn-sm btn-outline-secondary' %>
-                <%= link_to 'Delete', product_path(product), data: { turbo_method: :delete, turbo_confirm: 'Are you sure you want to delete this product?'}, class: 'btn btn-sm btn-outline-secondary' %>
-              <% end %>
+                <% if current_user == product.user %>
+                  <%= link_to 'Edit', edit_product_path(product), class: 'btn btn-sm btn-outline-secondary' %>
+                  <%= link_to 'Delete', product_path(product), data: { turbo_method: :delete, turbo_confirm: 'Are you sure you want to delete this product?'}, class: 'btn btn-sm btn-outline-secondary' %>
+                <% end %>
+              </div>
+              <small class="text-muted">R$ <%= "#{product.price.to_s.split('.')[0]},#{product.price.to_s.split('.')[1] == "0" ? "00" : product.price.to_s.split('.')[1]}" %></small>
             </div>
-            <small class="text-muted"><%= number_to_currency(product.price) %></small>
           </div>
         </div>
       </div>
-    </div>
-  <% end %>
-</div>
-<br>
-<div class= 'row justify-content-center'>
+    <% end %>
+  </div>
+  <br>
+  <div class= 'row justify-content-center'>
 
-  <%= link_to 'New Product', new_product_path, class: 'btn btn-primary btn-lg w-25 ' %></div>
+    <%= link_to 'New Product', new_product_path, class: 'btn btn-primary btn-lg w-25 ' %></div>
+
+</div>
