add about-us and contact in homepage

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -6,7 +6,7 @@
   </div>
 </div>
 
-<div class="container text-center my-2 p-2">
+<div class="container text-center my-5 p-2">
   <h2 class="text-center mt-2 mb-4"><strong>How it works</strong></h2>
     <div class="row d-flex justify-content-between">
 
@@ -41,7 +41,7 @@
 </div>
 
 
-<div class="container text-center my-2 p-2 ">
+<div class="container text-center my-5 p-2 ">
   <h2 class="text-center mb-4"><strong>Products</strong></h2>
   <div class="row mb-5">
 
@@ -93,5 +93,10 @@
       <% end %>
     </div>
 
+
   </div>
 </div>
+
+<%= render "pages/about_us" %>
+
+<%= render "pages/contact" %>
