--- a/app/views/pages/_footer.html.erb
+++ b/app/views/pages/_footer.html.erb
@@ -11,8 +11,8 @@
         <h4>Menu</h4>
         <div class="col-md-6">
           <ul class="list">
-              <li><a href="#">About Us</a></li>
-              <li><a href="#">Contact</a></li>
+              <li><a href="#about-us">About Us</a></li>
+              <li><a href="#contact">Contact</a></li>
           </ul>
         </div>
       </div>
