--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -34,8 +34,12 @@
               <div class="btn-group">
 
                 <% if current_user == product.user %>
-                  <%= link_to 'Edit', edit_product_path(product), class: 'btn btn-sm btn-outline-secondary' %>
-                  <%= link_to 'Delete', product_path(product), data: { turbo_method: :delete, turbo_confirm: 'Are you sure you want to delete this product?'}, class: 'btn btn-sm btn-outline-secondary' %>
+                  <%= link_to edit_product_path(product) do %>
+                    <i class="fa-regular fa-pen-to-square me-2"></i>
+                  <% end %>
+                  <%= link_to product_path(product), data: { turbo_method: :delete, turbo_confirm: 'Are you sure you want to delete this product?'} do %>
+                  <i class="fa-solid fa-trash-can"></i>
+                  <% end %>
                 <% end %>
               </div>
               <small class="text-muted">R$ <%= "#{product.price.to_s.split('.')[0]},#{product.price.to_s.split('.')[1] == "0" ? "00" : product.price.to_s.split('.')[1]}" %></small>
