--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -6,8 +6,7 @@
   <%= f.input :category, collection: Product::CATEGORIES %>
   <%= f.input :photos, as: :file, input_html: { multiple: true }  %>
 
-  <div class="actions">
-    <%= f.button :submit, class: 'btn btn-primary btn-lg' %>
+  <div class="actions d-flex justify-content-center"">
+    <%= f.button :submit, class: "btn btn-default btn-primary text-white my-2" %>
   </div>
 <% end %>
-
