small fix for the hp

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -22,7 +22,7 @@
       <div class="p-2 col-12 col-lg-4">
           <div class="card mb-3 shadow-sm p-3 rounded-3">
              <div class="card-body">
-                <h5 class="card-title"><i class="fa-solid fa-bag-shopping"></i>&nbsp;<strong>Apply</strong></h5>
+                <h5 class="card-title"><i class="fa-solid fa-bag-shopping"></i>&nbsp;<strong>Choose</strong></h5>
                 <p class="card-text">Simply select the item you want, choose your dates, and complete the straightforward application process</p>
             </div>
           </div>
@@ -31,8 +31,8 @@
       <div class="p-2 col-12 col-lg-4">
           <div class="card mb-3 shadow-sm p-3 rounded-3">
              <div class="card-body">
-                <h5 class="card-title"><i class="fa-solid fa-pen"></i>&nbsp;<strong>Write a review</strong></h5>
-                <p class="card-text">Share your experience and help our community grow! After your rental, take a moment to write a review</p>
+                <h5 class="card-title"><i class="fa-solid fa-handshake"></i>&nbsp;<strong>Rent</strong></h5>
+                <p class="card-text">Experience the joy of sharing! Your insights are crucial in building trust and making informed decisions. </p>
             </div>
           </div>
       </div>
